--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@ Join us on this celestial voyage, where every interaction is an invitation to aw
         <a class="box" href="https://docs.google.com/forms/d/e/1FAIpQLSeI5ze8yjLXQ8M_gGcprXyHYjgrZqurlTYjgqTvX6G3BgmsXg/viewform?usp=sf_link" target="_blank">
           Waitlist
         </a>
+        <div>
+        <a class="box" href="https://www.tiktok.com/@earthchat8" target="_blank">
+          TikTok
+        </a>
         <a class="box" href="https://x.com/_earthchat" target="_blank">
           X
         </a>
+        </div>
       </div>
       <a class="box" href="https://earthchat.online">
         Sign in
