Restyle waitlist link to be more prominent

--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@ Join us on this celestial voyage, where every interaction is an invitation to aw
 
     <div>
       <div id="cta">
-        <a class="box" href="https://docs.google.com/forms/d/e/1FAIpQLSeI5ze8yjLXQ8M_gGcprXyHYjgrZqurlTYjgqTvX6G3BgmsXg/viewform?usp=sf_link" target="_blank">
-          Waitlist
+        <a
+          id="waitlist-btn"
+          class="box" 
+          href="https://docs.google.com/forms/d/e/1FAIpQLSeI5ze8yjLXQ8M_gGcprXyHYjgrZqurlTYjgqTvX6G3BgmsXg/viewform?usp=sf_link"
+          target="_blank"
+        >
+          Join waitlist →
         </a>
         <div>
         <a class="box" href="https://www.tiktok.com/@earthchat8" target="_blank">
